--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,8 @@ after_success:
   - docker build -t ajayvedwa/multi-server ./server
   - docker build -t ajayvedwa/multi-worker ./worker
   - docker build -t ajayvedwa/multi-nginx ./nginx
-  # Login in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login - u "$DOCKER_ID" --password-stdin
-  # Push images to dockerhub
+# Login in to the docker CLI
+  - docker login - u $DOCKER_ID -p $DOCKER_PASSWORD
   - docker push ajayvedwa/multi-client
   - docker push ajayvedwa/multi-server
   - docker push ajayvedwa/multi-worker
