--- a/.travis.yml
+++ b/.travis.yml
@@ -3,19 +3,19 @@ services:
   - docker
 
 before_install:
-  - docker build -t ajayvedwa/multi-docker -f ./client/Dockerfile.dev ./client
+  - docker build -t $DOCKER_ID/multi-docker -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run -e CI=true ajayvedwa/multi-docker npm run test -- --coverage
+  - docker run -e CI=true $DOCKER_ID/multi-docker npm run test -- --coverage
 
 after_success:
-  - docker build -t ajayvedwa/multi-client ./client
-  - docker build -t ajayvedwa/multi-server ./server
-  - docker build -t ajayvedwa/multi-worker ./worker
-  - docker build -t ajayvedwa/multi-nginx ./nginx
+  - docker build -t $DOCKER_ID/multi-client ./client
+  - docker build -t $DOCKER_ID/multi-server ./server
+  - docker build -t $DOCKER_ID/multi-worker ./worker
+  - docker build -t $DOCKER_ID/multi-nginx ./nginx
 # Login in to the docker CLI
-  - docker login - u $DOCKER_ID -p $DOCKER_PASSWORD
-  - docker push ajayvedwa/multi-client
-  - docker push ajayvedwa/multi-server
-  - docker push ajayvedwa/multi-worker
-  - docker push ajayvedwa/multi-nginx
+  - echo "$DOCKER_PASSWORD" | docker login - u "$DOCKER_ID" --password-stdin
+  - docker push $DOCKER_ID/multi-client
+  - docker push $DOCKER_ID/multi-server
+  - docker push $DOCKER_ID/multi-worker
+  - docker push $DOCKER_ID/multi-nginx
